crates/assura-parser/tests/snapshots/snapshots__bad_token_errors.snap
---
source: crates/assura-parser/tests/snapshots.rs
assertion_line: 131
expression: "&error_messages"
---
[
    "102..103: expected clause, type, fn, or closing brace",
]
