crates/assura-parser/tests/snapshots/snapshots__duplicate_clause_ast.snap
---
source: crates/assura-parser/tests/snapshots.rs
assertion_line: 166
expression: "&ast"
---
Some(
    SourceFile {
        project: None,
        module: None,
        imports: [],
        decls: [
            Spanned {
                node: Contract(
                    ContractDecl {
                        name: "DuplicateRequires",
                        type_params: [],
                        clauses: [
                            Clause {
                                kind: Input,
                                body: Spanned {
                                    node: Raw(
                                        [
                                            "x",
                                            ":",
                                            "Int",
                                        ],
                                    ),
                                    span: 279..292,
                                },
                                effect_variables: [],
                            },
                            Clause {
                                kind: Output,
                                body: Spanned {
                                    node: Raw(
                                        [
                                            "result",
                                            ":",
                                            "Nat",
                                        ],
                                    ),
                                    span: 292..314,
                                },
                                effect_variables: [],
                            },
                            Clause {
                                kind: Requires,
                                body: Spanned {
                                    node: BinOp {
                                        lhs: Spanned {
                                            node: Ident(
                                                "x",
                                            ),
                                            span: 328..329,
                                        },
                                        op: Gte,
                                        rhs: Spanned {
                                            node: Literal(
                                                Int(
                                                    "0",
                                                ),
                                            ),
                                            span: 332..334,
                                        },
                                    },
                                    span: 328..334,
                                },
                                effect_variables: [],
                            },
                            Clause {
                                kind: Requires,
                                body: Spanned {
                                    node: BinOp {
                                        lhs: Spanned {
                                            node: Ident(
                                                "x",
                                            ),
                                            span: 350..351,
                                        },
                                        op: Lt,
                                        rhs: Spanned {
                                            node: Literal(
                                                Int(
                                                    "1000",
                                                ),
                                            ),
                                            span: 353..358,
                                        },
                                    },
                                    span: 350..358,
                                },
                                effect_variables: [],
                            },
                            Clause {
                                kind: Ensures,
                                body: Spanned {
                                    node: BinOp {
                                        lhs: Spanned {
                                            node: Ident(
                                                "result",
                                            ),
                                            span: 374..380,
                                        },
                                        op: Eq,
                                        rhs: Spanned {
                                            node: Ident(
                                                "x",
                                            ),
                                            span: 383..385,
                                        },
                                    },
                                    span: 374..385,
                                },
                                effect_variables: [],
                            },
                            Clause {
                                kind: Effects,
                                body: Spanned {
                                    node: Ident(
                                        "pure",
                                    ),
                                    span: 387..407,
                                },
                                effect_variables: [],
                            },
                        ],
                        fn_params: [],
                    },
                ),
                span: 0..409,
            },
        ],
    },
)
