crates/assura-parser/tests/snapshots/snapshots__duplicate_clause_errors.snap
---
source: crates/assura-parser/tests/snapshots.rs
assertion_line: 143
expression: "&error_messages"
---
[
    "284..285: expected clause, type, fn, or closing brace",
]
