crates/assura-parser/tests/snapshots/snapshots__missing_brace_ast.snap
---
source: crates/assura-parser/tests/snapshots.rs
expression: "&ast"
---
Some(
    SourceFile {
        project: None,
        module: None,
        imports: [],
        decls: [
            Spanned {
                node: Contract(
                    ContractDecl {
                        name: "Unclosed",
                        type_params: [],
                        clauses: [
                            Clause {
                                kind: Input,
                                body: Raw(
                                    [
                                        "x",
                                        ":",
                                        "Int",
                                    ],
                                ),
                            },
                            Clause {
                                kind: Output,
                                body: Raw(
                                    [
                                        "result",
                                        ":",
                                        "Nat",
                                    ],
                                ),
                            },
                            Clause {
                                kind: Requires,
                                body: BinOp {
                                    lhs: Ident(
                                        "x",
                                    ),
                                    op: Gte,
                                    rhs: Literal(
                                        Int(
                                            "0",
                                        ),
                                    ),
                                },
                            },
                            Clause {
                                kind: Ensures,
                                body: BinOp {
                                    lhs: Ident(
                                        "result",
                                    ),
                                    op: Eq,
                                    rhs: Ident(
                                        "x",
                                    ),
                                },
                            },
                        ],
                        fn_params: [],
                    },
                ),
                span: 0..78,
            },
        ],
    },
)
