crates/assura-parser/tests/snapshots/snapshots__missing_brace_error_codes.snap
---
source: crates/assura-parser/tests/snapshots.rs
expression: error_codes_and_messages(&errors)
---
[
    "A01002: expected R_BRACE",
    "A01002: expected R_BRACE",
]
