crates/assura-parser/tests/snapshots/snapshots__missing_brace_errors.snap
---
source: crates/assura-parser/tests/snapshots.rs
expression: "&error_messages"
---
[
    "found \"LBrace\" but expected one of \"ConstantTime\", \"Errors\", end of input, \"Contract\", \"Opaque\", \"LAngle\", \"Define\", \"Requires\", \"Rule\", \"Fn\", \"Ensures\", \"Bounds\", \"Reads\", \"Service\", \"DataFlow\", \"Axiom\", \"MustNot\", \"Colon\", \"MustBe\", \"Invariant\", \"Property\", \"Lemma\", \"Type\", \"Output\", \"Enum\", \"Extern\", \"VerifyAgainst\", \"Equals\", \"Hash\", \"Pure\", \"Input\", \"Spec\", \"Ghost\", \"Effects\", \"Modifies\"",
]
