crates/assura-parser/tests/snapshots/snapshots__snapshot_all_clause_kinds.snap
---
source: crates/assura-parser/tests/snapshots.rs
assertion_line: 40
expression: ast
---
SourceFile {
    project: None,
    module: None,
    imports: [],
    decls: [
        Spanned {
            node: Contract(
                ContractDecl {
                    name: "AllClauses",
                    type_params: [],
                    clauses: [
                        Clause {
                            kind: Input,
                            body: Raw(
                                [
                                    "buf",
                                    ":",
                                    "Bytes",
                                    ",",
                                    "n",
                                    ":",
                                    "Nat",
                                ],
                            ),
                        },
                        Clause {
                            kind: Output,
                            body: Raw(
                                [
                                    "result",
                                    ":",
                                    "Bool",
                                ],
                            ),
                        },
                        Clause {
                            kind: Requires,
                            body: BinOp {
                                lhs: Ident(
                                    "n",
                                ),
                                op: Gt,
                                rhs: Literal(
                                    Int(
                                        "0",
                                    ),
                                ),
                            },
                        },
                        Clause {
                            kind: Ensures,
                            body: BinOp {
                                lhs: Ident(
                                    "result",
                                ),
                                op: Eq,
                                rhs: Literal(
                                    Bool(
                                        true,
                                    ),
                                ),
                            },
                        },
                        Clause {
                            kind: Effects,
                            body: Raw(
                                [
                                    "pure",
                                ],
                            ),
                        },
                        Clause {
                            kind: Invariant,
                            body: BinOp {
                                lhs: Ident(
                                    "n",
                                ),
                                op: Gte,
                                rhs: Literal(
                                    Int(
                                        "0",
                                    ),
                                ),
                            },
                        },
                        Clause {
                            kind: Modifies,
                            body: Raw(
                                [
                                    "buf",
                                ],
                            ),
                        },
                        Clause {
                            kind: Rule,
                            body: BinOp {
                                lhs: Ident(
                                    "n",
                                ),
                                op: Lte,
                                rhs: MethodCall {
                                    receiver: Ident(
                                        "buf",
                                    ),
                                    method: "length",
                                    args: [],
                                },
                            },
                        },
                        Clause {
                            kind: DataFlow,
                            body: Raw(
                                [
                                    "buf",
                                    "->",
                                    "result",
                                ],
                            ),
                        },
                        Clause {
                            kind: MustNot,
                            body: Ident(
                                "overflow",
                            ),
                        },
                    ],
                },
            ),
            span: 0..197,
        },
    ],
}
