crates/assura-parser/tests/snapshots/snapshots__snapshot_contract_minimal.snap
---
source: crates/assura-parser/tests/snapshots.rs
expression: ast
---
SourceFile {
    project: None,
    module: None,
    imports: [],
    decls: [
        Spanned {
            node: Contract(
                ContractDecl {
                    name: "NonNegative",
                    type_params: [],
                    clauses: [
                        Clause {
                            kind: Input,
                            body: Spanned {
                                node: Raw(
                                    [
                                        "x",
                                        ":",
                                        "Int",
                                    ],
                                ),
                                span: 20..32,
                            },
                            effect_variables: [],
                        },
                        Clause {
                            kind: Output,
                            body: Spanned {
                                node: Raw(
                                    [
                                        "result",
                                        ":",
                                        "Nat",
                                    ],
                                ),
                                span: 32..50,
                            },
                            effect_variables: [],
                        },
                        Clause {
                            kind: Requires,
                            body: Spanned {
                                node: BinOp {
                                    lhs: Spanned {
                                        node: Ident(
                                            "x",
                                        ),
                                        span: 59..60,
                                    },
                                    op: Gte,
                                    rhs: Spanned {
                                        node: Literal(
                                            Int(
                                                "0",
                                            ),
                                        ),
                                        span: 62..63,
                                    },
                                },
                                span: 59..63,
                            },
                            effect_variables: [],
                        },
                        Clause {
                            kind: Ensures,
                            body: Spanned {
                                node: BinOp {
                                    lhs: Spanned {
                                        node: Ident(
                                            "result",
                                        ),
                                        span: 72..78,
                                    },
                                    op: Eq,
                                    rhs: Spanned {
                                        node: Ident(
                                            "x",
                                        ),
                                        span: 80..81,
                                    },
                                },
                                span: 72..81,
                            },
                            effect_variables: [],
                        },
                        Clause {
                            kind: Effects,
                            body: Spanned {
                                node: Ident(
                                    "pure",
                                ),
                                span: 82..95,
                            },
                            effect_variables: [],
                        },
                    ],
                    fn_params: [],
                },
            ),
            span: 0..96,
        },
    ],
}
