crates/assura-parser/tests/snapshots/snapshots__snapshot_demo_libwebp.snap
---
source: crates/assura-parser/tests/snapshots.rs
expression: ast
---
SourceFile {
    project: Some(
        ProjectDecl {
            name: "libwebp_vp8l",
            profile: [
                "core",
                "mem",
                "sec",
                "num",
            ],
        },
    ),
    module: Some(
        ModuleDecl {
            path: [
                "vp8l",
                "huffman",
            ],
        },
    ),
    imports: [],
    decls: [
        Spanned {
            node: Block {
                kind: FeatureMax,
                name: "MAX_ALPHABET_SIZE",
                value: Some(
                    [
                        ":",
                        "Nat",
                        "=",
                        "280",
                    ],
                ),
                body: [],
            },
            span: 66..102,
        },
        Spanned {
            node: Block {
                kind: FeatureMax,
                name: "MAX_CODE_LENGTH",
                value: Some(
                    [
                        ":",
                        "Nat",
                        "=",
                        "15",
                    ],
                ),
                body: [],
            },
            span: 102..135,
        },
        Spanned {
            node: Block {
                kind: FeatureMax,
                name: "ROOT_BITS",
                value: Some(
                    [
                        ":",
                        "Nat",
                        "=",
                        "8",
                    ],
                ),
                body: [],
            },
            span: 135..161,
        },
        Spanned {
            node: FnDef(
                FnDef {
                    name: "max_secondary_table_entries",
                    is_ghost: false,
                    is_lemma: false,
                    params: [
                        Param {
                            name: "alphabet_size",
                            ty: [
                                "Nat",
                            ],
                            parsed_type: Some(
                                Named(
                                    "Nat",
                                ),
                            ),
                        },
                        Param {
                            name: "root_bits",
                            ty: [
                                "Nat",
                            ],
                            parsed_type: Some(
                                Named(
                                    "Nat",
                                ),
                            ),
                        },
                        Param {
                            name: "code_lengths",
                            ty: [
                                "Sequence",
                                "<",
                                "Nat",
                                ">",
                            ],
                            parsed_type: Some(
                                Generic(
                                    "Sequence",
                                    [
                                        Named(
                                            "Nat",
                                        ),
                                    ],
                                ),
                            ),
                        },
                    ],
                    return_ty: [
                        "Nat",
                    ],
                    return_type_expr: Some(
                        Named(
                            "Nat",
                        ),
                    ),
                    clauses: [],
                },
            ),
            span: 161..612,
        },
        Spanned {
            node: FnDef(
                FnDef {
                    name: "worst_case_table_size",
                    is_ghost: false,
                    is_lemma: false,
                    params: [
                        Param {
                            name: "alphabet_size",
                            ty: [
                                "U16",
                            ],
                            parsed_type: Some(
                                Named(
                                    "U16",
                                ),
                            ),
                        },
                    ],
                    return_ty: [
                        "U32",
                    ],
                    return_type_expr: Some(
                        Named(
                            "U32",
                        ),
                    ),
                    clauses: [
                        Clause {
                            kind: Requires,
                            body: BinOp {
                                lhs: Ident(
                                    "alphabet_size",
                                ),
                                op: Lte,
                                rhs: Ident(
                                    "MAX_ALPHABET_SIZE",
                                ),
                            },
                        },
                        Clause {
                            kind: Other(
                                "must_be",
                            ),
                            body: Raw(
                                [
                                    "deterministic",
                                ],
                            ),
                        },
                    ],
                },
            ),
            span: 612..838,
        },
        Spanned {
            node: Block {
                kind: Table,
                name: "K_TABLE_SIZE",
                value: Some(
                    [
                        ":",
                        "[",
                        "U32",
                        ";",
                        "MAX_ALPHABET_SIZE",
                        "+",
                        "1",
                        "]",
                        "=",
                        "precompute",
                        "(",
                        "for",
                        "i",
                        "in",
                        "0",
                        "..",
                        "MAX_ALPHABET_SIZE",
                        "+",
                        "1",
                        "=>",
                        "worst_case_table_size",
                        "(",
                        "i",
                        "as",
                        "U16",
                        ")",
                        ")",
                    ],
                ),
                body: [
                    Clause {
                        kind: Other(
                            "verify_against",
                        ),
                        body: Raw(
                            [
                                "worst_case_table_size",
                            ],
                        ),
                    },
                ],
            },
            span: 838..989,
        },
        Spanned {
            node: FnDef(
                FnDef {
                    name: "vp8l_read_bits",
                    is_ghost: false,
                    is_lemma: false,
                    params: [
                        Param {
                            name: "br",
                            ty: [
                                "&mut",
                                "BitReader",
                            ],
                            parsed_type: Some(
                                Named(
                                    "&mut BitReader",
                                ),
                            ),
                        },
                        Param {
                            name: "n_bits",
                            ty: [
                                "{",
                                "b",
                                ":",
                                "Nat",
                                "|",
                                "b",
                                "<=",
                                "24",
                                "}",
                            ],
                            parsed_type: Some(
                                Named(
                                    "{ b : Nat | b <= 24 }",
                                ),
                            ),
                        },
                    ],
                    return_ty: [
                        "U32",
                        "@",
                        "taint",
                        ":",
                        "untrusted",
                    ],
                    return_type_expr: Some(
                        Named(
                            "U32 @ taint : untrusted",
                        ),
                    ),
                    clauses: [
                        Clause {
                            kind: Effects,
                            body: Raw(
                                [
                                    "io",
                                    ".",
                                    "read",
                                ],
                            ),
                        },
                    ],
                },
            ),
            span: 989..1080,
        },
        Spanned {
            node: FnDef(
                FnDef {
                    name: "read_huffman_code_lengths",
                    is_ghost: false,
                    is_lemma: false,
                    params: [
                        Param {
                            name: "br",
                            ty: [
                                "&mut",
                                "BitReader",
                            ],
                            parsed_type: Some(
                                Named(
                                    "&mut BitReader",
                                ),
                            ),
                        },
                        Param {
                            name: "alphabet_size",
                            ty: [
                                "{",
                                "a",
                                ":",
                                "Nat",
                                "|",
                                "a",
                                "<=",
                                "MAX_ALPHABET_SIZE",
                                "}",
                            ],
                            parsed_type: Some(
                                Named(
                                    "{ a : Nat | a <= MAX_ALPHABET_SIZE }",
                                ),
                            ),
                        },
                    ],
                    return_ty: [
                        "List",
                        "<",
                        "U16",
                        ">",
                        "@",
                        "taint",
                        ":",
                        "untrusted",
                    ],
                    return_type_expr: Some(
                        Named(
                            "List < U16 > @ taint : untrusted",
                        ),
                    ),
                    clauses: [
                        Clause {
                            kind: Effects,
                            body: Raw(
                                [
                                    "io",
                                    ".",
                                    "read",
                                ],
                            ),
                        },
                    ],
                },
            ),
            span: 1080..1328,
        },
        Spanned {
            node: FnDef(
                FnDef {
                    name: "validate_code_lengths",
                    is_ghost: false,
                    is_lemma: false,
                    params: [
                        Param {
                            name: "raw_lengths",
                            ty: [
                                "List",
                                "<",
                                "U16",
                                ">",
                                "@",
                                "taint",
                                ":",
                                "untrusted",
                            ],
                            parsed_type: Some(
                                Named(
                                    "List < U16 > @ taint : untrusted",
                                ),
                            ),
                        },
                        Param {
                            name: "alphabet_size",
                            ty: [
                                "{",
                                "a",
                                ":",
                                "Nat",
                                "|",
                                "a",
                                "<=",
                                "MAX_ALPHABET_SIZE",
                                "}",
                            ],
                            parsed_type: Some(
                                Named(
                                    "{ a : Nat | a <= MAX_ALPHABET_SIZE }",
                                ),
                            ),
                        },
                    ],
                    return_ty: [
                        "ValidCodeLengths",
                        "@",
                        "taint",
                        ":",
                        "validated",
                        "|",
                        "HuffmanError",
                    ],
                    return_type_expr: Some(
                        Named(
                            "ValidCodeLengths @ taint : validated | HuffmanError",
                        ),
                    ),
                    clauses: [
                        Clause {
                            kind: Effects,
                            body: Raw(
                                [
                                    "pure",
                                ],
                            ),
                        },
                    ],
                },
            ),
            span: 1328..1950,
        },
        Spanned {
            node: Contract(
                ContractDecl {
                    name: "BuildHuffmanTableContract",
                    type_params: [],
                    clauses: [],
                },
            ),
            span: 1950..2568,
        },
        Spanned {
            node: FnDef(
                FnDef {
                    name: "decode_huffman_group",
                    is_ghost: false,
                    is_lemma: false,
                    params: [
                        Param {
                            name: "br",
                            ty: [
                                "&mut",
                                "BitReader",
                            ],
                            parsed_type: Some(
                                Named(
                                    "&mut BitReader",
                                ),
                            ),
                        },
                        Param {
                            name: "table_buf",
                            ty: [
                                "Region",
                                "<",
                                "TOTAL_TABLE_SIZE",
                                ">",
                            ],
                            parsed_type: Some(
                                Generic(
                                    "Region",
                                    [
                                        Named(
                                            "TOTAL_TABLE_SIZE",
                                        ),
                                    ],
                                ),
                            ),
                        },
                    ],
                    return_ty: [
                        "HuffmanGroup",
                        "|",
                        "DecodeError",
                    ],
                    return_type_expr: Some(
                        Named(
                            "HuffmanGroup | DecodeError",
                        ),
                    ),
                    clauses: [
                        Clause {
                            kind: Effects,
                            body: Raw(
                                [
                                    "io",
                                    ".",
                                    "read",
                                ],
                            ),
                        },
                    ],
                },
            ),
            span: 2568..2877,
        },
    ],
}
